# spark_k8s_prometheus

./: README.md
app/: Dockerfile  pyproject.toml
kubernetes/app/: deployment.yaml
kubernetes/prometheus/: configmap.yaml
