[tool.poetry]
name = "app"
description = "sample app prometheus"
version = "0.1.0"
authors = [
    "Abhishek Verma <abhishek.verma@canonical.com>"
]

[tool.poetry.dependencies]
python = "^3.6"
prometheus-client = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
